# Loan-Approval-Project

./: Dockerfile  README.md  applicant.txt  loan-approval-project.ipynb  predict.py  pyproject.toml  test.py  train-loan-status-model.ipynb  train.py
