[tool.poetry]
name = "loan-approval-project"
version = "0.1.0"
description = "Predicts whether one is to be approved of a loan"
authors = ["Adams Damola <adedamolaadams810@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
Flask = "^3.1.0"
waitress = "^3.0.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
